--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
+html {
+  /* Primero comando para pular para o próximo vídeo com um leve comando (mouse ou dedo) */
+  scroll-snap-type: y mandatory;
+}
+
 .App {
-  text-align: center;
+  background-color: black;
+  height: 100vh;
+  display: grid;
+  place-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App__videos {
+  height: 100vh;
+  height: 90%;
+  max-height: 800px;
+  width: 80%;
+  max-width: 500px;
+  border: 1px solid black;
+  border-radius: 20px;
+
+
+  /* Limitar a rolagem somente dentro do vídeo*/
+  overflow: scroll;                   
+
+  /* Para esconder o scrollbar do internet explore e firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  /* Primero comando para pular para o próximo vídeo com um leve comando (mouse ou dedo) */
+  scroll-snap-type: y mandatory;  
+
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Para esconder o scrollbar do chorome e edge */
+.App__videos::-webkit-scrollbar {
+  display: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
