--- a/src/pages/components/footer/videoFooter.css
+++ b/src/pages/components/footer/videoFooter.css
@@ -5,7 +5,7 @@
     margin-left: 20px;
 }
 
-.videoFooter__text h3, p{
+.videoFooter__text h3, .videoFooter__text p{
     padding-bottom: 20px;
 }
 
